# fbpca

./: fbpca.py  pyproject.toml
tests/: fbpca.py
